--- a/plugin.yaml
+++ b/plugin.yaml
@@ -4,5 +4,5 @@
 
 plugins:
     script:
-        executor: host_agent
-        source: https://github.com/cloudify-cosmo/cloudify-script-plugin/archive/1.2.zip
+        executor: central_deployment_agent
+        source: https://github.com/greggigon/cloudify-script-plugin/archive/1.2.zip
